feat(backend): correcion para front(catalogo)